openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ittis
  labels:
    app.kubernetes.io/name: ittis
    app.kubernetes.io/part-of: ittis
